--- a/mandelbulber2/qt/material_editor.ui
+++ b/mandelbulber2/qt/material_editor.ui
@@ -119,9 +119,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-1655</y>
+        <y>-2210</y>
         <width>466</width>
-        <height>3699</height>
+        <height>3665</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -3562,7 +3562,7 @@ direction vector:</string>
               <number>2</number>
              </property>
              <item>
-              <layout class="QGridLayout" name="gridLayout_13" columnstretch="0,1">
+              <layout class="QGridLayout" name="gridLayout_13" columnstretch="0,0">
                <item row="1" column="1">
                 <widget class="MyColorButton" name="colorButton_reflections_color" native="true">
                  <property name="sizePolicy">
@@ -3618,19 +3618,6 @@ direction vector:</string>
                  </property>
                 </widget>
                </item>
-               <item row="2" column="0" colspan="2">
-                <widget class="MyCheckBox" name="checkBox_reflections_color_thesame">
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="text">
-                  <string>Use the same color as main color</string>
-                 </property>
-                </widget>
-               </item>
               </layout>
              </item>
             </layout>
@@ -3642,6 +3629,18 @@ direction vector:</string>
              <string>Transparency</string>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_13">
+             <property name="leftMargin">
+              <number>2</number>
+             </property>
+             <property name="topMargin">
+              <number>2</number>
+             </property>
+             <property name="rightMargin">
+              <number>2</number>
+             </property>
+             <property name="bottomMargin">
+              <number>2</number>
+             </property>
              <item>
               <layout class="QGridLayout" name="gridLayout_14">
                <property name="verticalSpacing">
@@ -4682,22 +4681,6 @@ object size)</string>
     <hint type="destinationlabel">
      <x>176</x>
      <y>-1406</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>checkBox_reflections_color_thesame</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>colorButton_reflections_color</receiver>
-   <slot>setDisabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>88</x>
-     <y>846</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>197</x>
-     <y>821</y>
     </hint>
    </hints>
   </connection>
