--- a/mandelbulber2/formula/ui/transf_poly_fold_sym.ui
+++ b/mandelbulber2/formula/ui/transf_poly_fold_sym.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>871</width>
-    <height>825</height>
+    <height>906</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,7 +30,7 @@
     <number>2</number>
    </property>
    <item>
-    <layout class="QGridLayout" name="gridLayout" columnstretch="0,0">
+    <layout class="QGridLayout" name="gridLayout" columnstretch="0,1">
      <property name="spacing">
       <number>2</number>
      </property>
@@ -82,13 +82,6 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_142">
-       <property name="text">
-        <string>PolyFold Sym XY</string>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_145">
        <property name="text">
@@ -100,16 +93,6 @@
       <widget class="QLabel" name="label_148">
        <property name="text">
         <string>y</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QFrame" name="frame">
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
        </property>
       </widget>
      </item>
@@ -141,10 +124,10 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+     <item row="0" column="0" colspan="2">
+      <widget class="QLabel" name="label_142">
        <property name="text">
-        <string notr="true">eiffie</string>
+        <string>PolyFold Sym XY</string>
        </property>
       </widget>
      </item>
